crates/review-buddy/tests/snapshots/show_filters__filtered_queue_160x40_default_theme.snap
---
source: crates/review-buddy/tests/show_filters.rs
expression: text(&render(&mut a))
---
 review buddy  ·  demo · 4 sources · 7 changes                                                                                                       Liminal HQ
╭ sources ───────────────╮╭ queue ───────────────────────────────────────╮╭ liminal-hq/review-buddy#214 ───────────────────────────────────────────────────────╮
│▌ ● All               6 ││  Waiting on you · 2                          ││ Add a menu bar and keyboard-driven menus                                           │
│    every source        ││▌ ◐ Add a menu bar and keyboard-driven me… 2h ││ ada wants ada/menus → main                                                         │
│  ● liminal-hq        3 ││▌ GH review-buddy#214 · ada · review requested││ +32 −1 · 3 files · opened 3d ago                                                   │
│    github.com          ││  ● Raise muted text contrast in the ligh… 5h ││                                                                                    │
│  ● smorris           0 ││  GH review-buddy#209 · jo · approved by you  ││ a Approve  x Request changes  c Comment  ⏎ Diff  m Merge                           │
│    github.com          ││                                              ││                                                                                    │
│  ● platform          2 ││  Worth a look · 1                            ││  Overview   Files 3   Checks 6   Conversation 3                                    │
│    gitlab.platform.ex… ││  ✕ Cache pipeline status lookups          7h ││ ────────────────────────────────────────────────────────────────────────────────── │
│  ● gitlab.com        1 ││  GL flow!1182 · priya · you're mentioned     ││ Adds a menu bar along the top and a Menu type that tracks the selected item.       │
│    gitlab.com          ││                                              ││                                                                                    │
│                        ││  Can wait · 1                                ││ • Menu::select_next and Menu::select_prev move the highlight                       │
│  Show  s to change     ││  · Clarify the install steps              3d ││ • Menu::activate returns the action for the highlighted item                       │
│  [x] reviewing         ││  GL notes!12 · kai · approved by you         ││ • The bar itself is a plain Line, so it picks up the active theme                  │
│  [x] assigned          ││                                              ││                                                                                    │
│  [ ] authored          ││  ▸ Noise · 2 bot updates · ⏎ to expand       ││ Reviewers                                Checks                                    │
│  [x] drafts            ││                                              ││ ◌ smorris requested                      ● 2 passing  ◐ 1 running                  │
│  [ ] noise             ││  ── That's everything.                       ││ ✎ jo commented                           ○ 1 neutral  ↷ 1 skipped  ⊘ 1 cancelled   │
│                        ││  1 hidden by your Show filters · s to change ││                                                                                    │
│                        ││                                              ││ Latest comment                                                                     │
│                        ││                                              ││ jo · 5h ago · menubar.rs:7                                                         │
│                        ││                                              ││ These three lines could be one join. Is the intermediate Vec doing anything for    │
│                        ││                                              ││ us?                                                                                │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││ Your review  not started                                                           │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
╰────────────────────────╯╰──────────────────────────────────────────────╯╰────────────────────────────────────────────────────────────────────────────────────╯
 ⏎ diff  o open  y copy  s show filters  ? help  T theme  q quit
