crates/review-buddy/tests/snapshots/show_filters__show_control_100x30_dusk.snap
---
source: crates/review-buddy/tests/show_filters.rs
expression: text(&render(&mut a))
---
 review buddy  ·  demo · 4 sources · 7 changes                                                 Dusk
  1 ● All 7   2 ● liminal-hq 3   3 ● smorris 1   4 ● platform 2   5 ● gitlab.com 1
╭ queue ───────────────────────────────────────╮╭ liminal-hq/review-buddy#214 ─────────────────────╮
│  Waiting on you · 2                          ││ Add a menu bar and keyboard-driven menus         │
│▌ ◐ Add a menu bar and keyboard-driven me… 2h ││ ada wants ada/menus → main                       │
│▌ GH review-buddy#214 · ada · review requested││ +32 −1 · 3 files · opened 3d ago                 │
│  ● Raise muted text contrast in the ligh… 5h ││                                                  │
│  GH review-buddy#209 · jo · approved by you  ││ a Approve  x Request changes  c Comment  ⏎ Diff  │
│                                              ││                                                  │
│  Worth a look · 2    ╭ Show ──────────────────────────────────────────────╮s 6   Conversation 3  │
│  ✕ Cache pipeline sta│                                                    │───────────────────── │
│  GL flow!1182 · priya│▌ [x] reviewing  changes waiting on your review     │op and a Menu type    │
│  ● Tidy zsh startup  │  [x] assigned   changes assigned to you            │em.                   │
│  GH dotfiles#31 · smo│  [x] authored   changes you opened                 │                      │
│                      │  [ ] drafts     drafts, yours and others           │u::select_prev move   │
│  Can wait · 1        │  [ ] noise      bot updates, mixed into the buckets│                      │
│  · Clarify the instal│                                                    │e action for the      │
│  GL notes!12 · kai · │  Nothing is hidden.                                │                      │
│                      │  space toggle · esc close · this session only      │ Line, so it picks up │
│  ▸ Noise · 2 bot upda╰────────────────────────────────────────────────────╯                      │
│                                              ││                                                  │
│  ── That's everything.                       ││ Reviewers                                        │
│  7 in this view.                             ││ ◌ smorris requested                              │
│                                              ││ ✎ jo commented                                   │
│                                              ││                                                  │
│                                              ││ Checks                                           │
│                                              ││ ● 2 passing  ◐ 1 running                         │
│                                              ││ ○ 1 neutral  ↷ 1 skipped  ⊘ 1 cancelled          │
╰──────────────────────────────────────────────╯╰──────────────────────────────────────────────────╯
 ⏎ diff  o open  y copy  s show filters  ? help  T theme  q quit
